EXTRA_DIST = $(dia_images) $(png_images) $(svg_images) $(draw_io_images)

dia_images = LIXA_Configuration_1.dia  LIXA_Configuration_4.dia \
	LIXA_Configuration_7.dia LIXA_Configuration_2.dia \
	LIXA_Configuration_5.dia LIXA_Configuration_8.dia \
	LIXA_Configuration_3.dia LIXA_Configuration_6.dia \
	LIXA_Configuration_9.dia \
	LIXA_Development_1.dia LIXA_Development_2.dia LIXA_Development_3.dia \
	LIXA_Development_4.dia LIXA_Development_5.dia LIXA_Development_6.dia \
	LIXA_Development_7.dia LIXA_Development_8.dia LIXA_Development_9.dia \
	LIXA_Development_10.dia LIXA_Development_11.dia \
	LIXA_Development_12.dia LIXA_Development_13.dia \
	LIXA_Development_15.dia \
	LIXA_Recovery_01.dia LIXA_Recovery_02.dia LIXA_Recovery_03.dia \
	LIXA_In_Depth_01.dia LIXA_In_Depth_02.dia LIXA_In_Depth_03.dia

draw_io_images = LIXA_Development_XTA.xml

png_images = LIXA_Configuration_1.png  LIXA_Configuration_4.png \
	LIXA_Configuration_7.png LIXA_Configuration_2.png \
	LIXA_Configuration_5.png LIXA_Configuration_8.png \
	LIXA_Configuration_3.png LIXA_Configuration_6.png \
	LIXA_Configuration_9.png \
	LIXA_Development_1.png LIXA_Development_2.png LIXA_Development_3.png \
	LIXA_Development_4.png LIXA_Development_5.png LIXA_Development_6.png \
	LIXA_Development_7.png LIXA_Development_8.png LIXA_Development_9.png \
	LIXA_Development_10.png LIXA_Development_11.png \
	LIXA_Development_12.png LIXA_Development_13.png \
	LIXA_Development_15.png \
	LIXA_Recovery_01.png LIXA_Recovery_02.png LIXA_Recovery_03.png \
	LIXA_In_Depth_01.png LIXA_In_Depth_02.png LIXA_In_Depth_03.png \
	LIXA_Tuning_01.png LIXA_Tuning_02.png \
	LIXA_Tuning_03.png LIXA_Tuning_04.png \
	LIXA_Tuning_05.png LIXA_Tuning_06.png \
	LIXA_Tuning_07.png LIXA_Tuning_08.png \
	LIXA_Tuning_09.png LIXA_Tuning_10.png

svg_images = LIXA_Development_XTA_01.svg LIXA_Development_XTA_02.svg \
	LIXA_Development_XTA_03.svg LIXA_Development_XTA_04.svg \
	LIXA_Development_XTA_05.svg LIXA_Development_XTA_06.svg \
	LIXA_Development_XTA_07.svg

docdir = $(datadir)/doc/$(PACKAGE)-$(VERSION)/images
doc_DATA = $(png_images) $(svg_images)

